# hexlet-django-blog

./: .gitignore  README.md  pyproject.toml
hexlet_django_blog/: asgi.py  settings.py  urls.py  views.py  wsgi.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/article/: comment.html  create.html  index.html  show.html  update.html
hexlet_django_blog/templates/: about.html  index.html
